--- a/marco.html
+++ b/marco.html
@@ -163,37 +163,13 @@
                 </div>
                 <div id="meio">
                     <div id="tudoIMG">
-                        <img src="marco/dunas.PNG" id="imagem">
+                        <img src="marco/IMG_6902.jpg" id="imagem">
                     </div>
                 </div>
                 <div id="baixo">
                     <div id="voltaTextoBaixo">
                         <div id="divTexto">
                             <label id="texto">Primeira vez que fui nas dunas do Moçambique foi muito legal acho que nunca ia ir se não fosse vc amor que me levasse esse dia foi um dois melhores tbm junto com meu sobrinho até o joão estava depois fomos na praia</label>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div id="container">
-        <div id="scroll">
-            <div id="voltaTudo">
-                <div id="cima">
-                    <div id="doTitulo">
-                        <label id="titulo">31/01/2022</label>
-                    </div>
-                </div>
-                <div id="meio">
-                    <div id="tudoIMG">
-                        <img src="janeiroIMG/deliciaPronta.jpg" id="imagem">
-                    </div>
-                </div>
-                <div id="baixo">
-                    <div id="voltaTextoBaixo">
-                        <div id="divTexto">
-                            <label id="texto">a</label>
                         </div>
                     </div>
                 </div>
