--- a/junho.html
+++ b/junho.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styleMes.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+
 </head>
 <body>
     <div id="container">
@@ -12,18 +16,18 @@
             <div id="voltaTudo">
                 <div id="cima">
                     <div id="doTitulo">
-                        <label id="titulo">31/01/2022</label>
+                        <label id="titulo">Bike</label>
                     </div>
                 </div>
                 <div id="meio">
                     <div id="tudoIMG">
-                        <img src="janeiroIMG/deliciaPronta.jpg" id="imagem">
+                        <img src="junho/indoBike.jpg" id="imagem">
                     </div>
                 </div>
                 <div id="baixo">
                     <div id="voltaTextoBaixo">
                         <div id="divTexto">
-                            <label id="texto">a</label>
+                            <label id="texto">Mds esse dia eu lembro que estava muito frio parecia que era o dia mais frio do ano tinha saido da escola e fui para sua casa te buscar não sei como a gente teve corragem de ir de bike pq porra tu com duas calças não sei quantas camisas e moletom mas deu tudo certo né</label>
                         </div>
                     </div>
                 </div>
@@ -36,18 +40,18 @@
             <div id="voltaTudo">
                 <div id="cima">
                     <div id="doTitulo">
-                        <label id="titulo">31/01/2022</label>
+                        <label id="titulo">Casa Terezinha</label>
                     </div>
                 </div>
                 <div id="meio">
                     <div id="tudoIMG">
-                        <img src="janeiroIMG/deliciaPronta.jpg" id="imagem">
+                        <img src="junho/casaVoDois.jpg" id="imagem">
                     </div>
                 </div>
                 <div id="baixo">
                     <div id="voltaTextoBaixo">
                         <div id="divTexto">
-                            <label id="texto">a</label>
+                            <label id="texto">Aniversario da terezinhaaa onde teve uma pausinha para tirar varias midias</label>
                         </div>
                     </div>
                 </div>
@@ -60,21 +64,215 @@
             <div id="voltaTudo">
                 <div id="cima">
                     <div id="doTitulo">
-                        <label id="titulo">31/01/2022</label>
+                        <label id="titulo">Pizzaria</label>
                     </div>
                 </div>
                 <div id="meio">
                     <div id="tudoIMG">
-                        <img src="janeiroIMG/deliciaPronta.jpg" id="imagem">
+                        <img src="junho/17NaPizzaria.jpg" id="imagem">
                     </div>
                 </div>
                 <div id="baixo">
                     <div id="voltaTextoBaixo">
                         <div id="divTexto">
-                            <label id="texto">a</label>
+                            <label id="texto">No rodiozio do seu aniversario um dia antes né, não no teu aniversario ainda mesmo foi muito divertido amor bastante gente foi até a vó nossos pais se falando a primeira vez com o Lucas e a Luana tambem, na hora dessa foto desafiados a fzr nossa especialidade o deb nessa época viciados em fzr isso</label>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <div id="container">
+        <div id="scroll">
+            <div id="voltaTudo">
+                <div id="cima">
+                    <div id="doTitulo">
+                        <label id="titulo">Vespera</label>
+                    </div>
+                </div>
+                <div id="meio">
+                    <div id="tudoIMG">
+                        <img src="junho/dia10.jpg" id="imagem">
+                    </div>
+                </div>
+                <div id="baixo">
+                    <div id="voltaTextoBaixo">
+                        <div id="divTexto">
+                            <label id="texto">Dando uma voltinha em canas curtindo a vespera do teu aniversario depois do rodizio</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div id="container">
+        <div id="scroll">
+            <div id="voltaTudo">
+                <div id="cima">
+                    <div id="doTitulo">
+                        <label id="titulo">Velinhas</label>
+                    </div>
+                </div>
+                <div id="meioDois">
+                    <div id="tudoIMG">
+                        <img src="junho/17emCasa.jpg" id="imagem">
+                    </div>
+                </div>
+                <div id="baixoDois">
+                    <div id="voltaTextoBaixoDois">
+                        <div id="divTexto">
+                            <label id="texto">Enfim o aniversario da momozinha 17 anos amor mds tais velha msm primeiro aniversario que passamos juntos desde antes de dar meia noite estava sendo muito especial para nós no dia 11 mesmo na tua casa comemorando teu aniversario não era do jeito que vc qria fiquei mutio mal te vendo daquele jeito mas sempre tentava mudar teu pensamento te deixar mais feliz vc é o amor da minha vida amanda com todo as minhas forças quero te deixar feliz. Quando tu fecha a cara as vezes, ja começo a te encomodar pois sei que é um jeito de te fzr esquecer as coisas quando estamos juntos eu sei que tem vezes que eu passo do ponto mas esse é o meu jeito de te mostra o meu amor eterno a você</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="container">
+        <div id="scroll">
+            <div id="voltaTudo">
+                <div id="cima">
+                    <div id="doTitulo">
+                        <label id="titulo">12/06</label>
+                    </div>
+                </div>
+                <div id="meioTres">
+                    <div id="tudoIMG">
+                        <img src="junho/printDia12.PNG" id="imagem">
+                    </div>
+                </div>
+                <div id="baixoTres">
+                    <div id="voltaTextoBaixo">
+                        <div id="divTexto">
+                            <label id="texto">Dia dos namorados nosso dia amor nosso primeiro logo depois do seu aniversario era uma segunda feira com chuva e friozinho tu faltou aula  e a gente tava tentando dar uma desculpa pro meu chefe pra mim faltar tbm mandamos uma foto que nem era daquele dia kkkkk mas deu certo e aproveitamos muito esse dia, procurei mais fotos desse dia tipo dos presentes mas não achei mas do mesmo jeito quero dizer a gostei de todos do macaquinho das basteirinhas as tortinhas da caixa de tudo meu amor obrigado eu te amoooo </label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="container">
+        <div id="scroll">
+            <div id="voltaTudo">
+                <div id="cima">
+                    <div id="doTitulo">
+                        <label id="titulo">Friaca</label>
+                    </div>
+                </div>
+                <div id="meio">
+                    <div id="tudoIMG">
+                        <img src="junho/euEmano.jpg" id="imagem">
+                    </div>
+                </div>
+                <div id="baixo">
+                    <div id="voltaTextoBaixo">
+                        <div id="divTexto">
+                            <label id="texto">Esse mês foi muito frio mds e fiquei muito feliz por isso pois estamos juntinhos se esquentendo te todos os jeitos possiveis [eu e meu mano]</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="container">
+        <div id="scroll">
+            <div id="voltaTudo">
+                <div id="cima">
+                    <div id="doTitulo">
+                        <label id="titulo">Lasanha</label>
+                    </div>
+                </div>
+                <div id="meio">
+                    <div id="tudoIMG">
+                        <img src="junho/lasanha.jpg" id="imagem">
+                    </div>
+                </div>
+                <div id="baixo">
+                    <div id="voltaTextoBaixo">
+                        <div id="divTexto">
+                            <label id="texto">Euuuu</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="container">
+        <div id="scroll">
+            <div id="voltaTudo">
+                <div id="cima">
+                    <div id="doTitulo">
+                        <label id="titulo">Indo Jovem</label>
+                    </div>
+                </div>
+                <div id="meio">
+                    <div id="tudoIMG">
+                        <img src="junho/levarEscola.JPG" id="imagem">
+                    </div>
+                </div>
+                <div id="baixo">
+                    <div id="voltaTextoBaixo">
+                        <div id="divTexto">
+                            <label id="texto">Esse mes tbm foi o ultimo do meu contrato quando acabou pude ter mais tempo até vc dorme ali em casa podia te levar até escola no forte de 07:40 sempre perdendo a primeira aula kkkkk</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="container">
+        <div id="scroll">
+            <div id="voltaTudo">
+                <div id="cima">
+                    <div id="doTitulo">
+                        <label id="titulo">Xisss</label>
+                    </div>
+                </div>
+                <div id="meio">
+                    <div id="tudoIMG">
+                        <img src="junho/hamburger.jpg" id="imagem">
+                    </div>
+                </div>
+                <div id="baixo">
+                    <div id="voltaTextoBaixo">
+                        <div id="divTexto">
+                            <label id="texto">Lanchinhos tbm teve alguns até msm meio dia nas terças era o dia das gurias mas eu sempre tava infiltrado algumas hrs meio dia e fim de tarde</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="container">
+        <div id="scroll">
+            <div id="voltaTudo">
+                <div id="cima">
+                    <div id="doTitulo">
+                        <label id="titulo">DEB</label>
+                    </div>
+                </div>
+                <div id="meio">
+                    <div id="tudoIMG">
+                        <img src="junho/deb.jpg" id="imagem">
+                    </div>
+                </div>
+                <div id="baixo">
+                    <div id="voltaTextoBaixo">
+                        <div id="divTexto">
+                            <label id="texto">Melhor deb de todo o mundo</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
