--- a/dezembro.html
+++ b/dezembro.html
@@ -237,7 +237,7 @@
                 <div id="baixo">
                     <div id="voltaTextoBaixo">
                         <div id="divTexto">
-                            <label id="texto">a</label>
+                            <label id="texto">Esse natal tenho certeza q foi o mais especial de todos pois estavamos juntos pela primeira vez de muitas só tenho a te agradecer amor foi muito legal poder ficar um pouco mais proximo da tua fml pensar q eu não ia ir q loucura né</label>
                         </div>
                     </div>
                 </div>
@@ -251,18 +251,18 @@
             <div id="voltaTudo">
                 <div id="cima">
                     <div id="doTitulo">
-                        <label id="titulo">31/01/2022</label>
+                        <label id="titulo">Lagoinha</label>
                     </div>
                 </div>
                 <div id="meio">
                     <div id="tudoIMG">
-                        <img src="janeiroIMG/deliciaPronta.jpg" id="imagem">
+                        <img src="dezembro/lagoinhasSombra.jpg" id="imagem">
                     </div>
                 </div>
                 <div id="baixo">
                     <div id="voltaTextoBaixo">
                         <div id="divTexto">
-                            <label id="texto">a</label>
+                            <label id="texto">Depois do natal devolta a nossa rotina de praia um pouco de lagoinha onde a gnt consegui ver os golfinhos dps até a cachoeira mas antes passamos no forte da ponta pra comer e comprar a pior salsicha q existe mds só de lembrar ja da um negocio mas foi muito bom pq conseguimos aproveitar um momento só nosso</label>
                         </div>
                     </div>
                 </div>
@@ -276,18 +276,18 @@
             <div id="voltaTudo">
                 <div id="cima">
                     <div id="doTitulo">
-                        <label id="titulo">31/01/2022</label>
+                        <label id="titulo">Lazer no MV</label>
                     </div>
                 </div>
                 <div id="meio">
                     <div id="tudoIMG">
-                        <img src="janeiroIMG/deliciaPronta.jpg" id="imagem">
+                        <img src="dezembro/mvPiscina.JPG" id="imagem">
                     </div>
                 </div>
                 <div id="baixo">
                     <div id="voltaTextoBaixo">
                         <div id="divTexto">
-                            <label id="texto">a</label>
+                            <label id="texto">Mas nao é só praia q a gnt gosta uma piscina as vezes é bom ainda mais acompanhada de um sorvetinho naquele calor paz no MV</label>
                         </div>
                     </div>
                 </div>
@@ -300,115 +300,18 @@
             <div id="voltaTudo">
                 <div id="cima">
                     <div id="doTitulo">
-                        <label id="titulo">31/01/2022</label>
+                        <label id="titulo">26/12/2023</label>
                     </div>
                 </div>
                 <div id="meio">
                     <div id="tudoIMG">
-                        <img src="janeiroIMG/deliciaPronta.jpg" id="imagem">
+                        <img src="dezembro/xisDia26.jpg" id="imagem">
                     </div>
                 </div>
                 <div id="baixo">
                     <div id="voltaTextoBaixo">
                         <div id="divTexto">
-                            <label id="texto">a</label>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <div id="container">
-        <div id="scroll">
-            <div id="voltaTudo">
-                <div id="cima">
-                    <div id="doTitulo">
-                        <label id="titulo">31/01/2022</label>
-                    </div>
-                </div>
-                <div id="meio">
-                    <div id="tudoIMG">
-                        <img src="janeiroIMG/deliciaPronta.jpg" id="imagem">
-                    </div>
-                </div>
-                <div id="baixo">
-                    <div id="voltaTextoBaixo">
-                        <div id="divTexto">
-                            <label id="texto">a</label>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div id="container">
-        <div id="scroll">
-            <div id="voltaTudo">
-                <div id="cima">
-                    <div id="doTitulo">
-                        <label id="titulo">31/01/2022</label>
-                    </div>
-                </div>
-                <div id="meio">
-                    <div id="tudoIMG">
-                        <img src="janeiroIMG/deliciaPronta.jpg" id="imagem">
-                    </div>
-                </div>
-                <div id="baixo">
-                    <div id="voltaTextoBaixo">
-                        <div id="divTexto">
-                            <label id="texto">a</label>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div id="container">
-        <div id="scroll">
-            <div id="voltaTudo">
-                <div id="cima">
-                    <div id="doTitulo">
-                        <label id="titulo">31/01/2022</label>
-                    </div>
-                </div>
-                <div id="meio">
-                    <div id="tudoIMG">
-                        <img src="janeiroIMG/deliciaPronta.jpg" id="imagem">
-                    </div>
-                </div>
-                <div id="baixo">
-                    <div id="voltaTextoBaixo">
-                        <div id="divTexto">
-                            <label id="texto">a</label>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div id="container">
-        <div id="scroll">
-            <div id="voltaTudo">
-                <div id="cima">
-                    <div id="doTitulo">
-                        <label id="titulo">31/01/2022</label>
-                    </div>
-                </div>
-                <div id="meio">
-                    <div id="tudoIMG">
-                        <img src="janeiroIMG/deliciaPronta.jpg" id="imagem">
-                    </div>
-                </div>
-                <div id="baixo">
-                    <div id="voltaTextoBaixo">
-                        <div id="divTexto">
-                            <label id="texto">a</label>
+                            <label id="texto">Para comemorar nosso aniversario de 11 meses estamos sem ideia pq logo no dia o baitaka estava fechado ent tivemos q mudar a lanchonete em uma tentativa q achar algo bom pedimos dessa q infelizmete era muito ruim mas comi bastante msm assim pq foi caro </label>
                         </div>
                     </div>
                 </div>
@@ -422,18 +325,66 @@
             <div id="voltaTudo">
                 <div id="cima">
                     <div id="doTitulo">
-                        <label id="titulo">31/01/2022</label>
+                        <label id="titulo">Canas</label>
                     </div>
                 </div>
                 <div id="meio">
                     <div id="tudoIMG">
-                        <img src="janeiroIMG/deliciaPronta.jpg" id="imagem">
+                        <img src="dezembro/fotoJet.jpg" id="imagem">
                     </div>
                 </div>
                 <div id="baixo">
                     <div id="voltaTextoBaixo">
                         <div id="divTexto">
-                            <label id="texto">a</label>
+                            <label id="texto">Quase chegando o dia da virada fomos dar uma voltinha em canas com os d lei</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="container">
+        <div id="scroll">
+            <div id="voltaTudo">
+                <div id="cima">
+                    <div id="doTitulo">
+                        <label id="titulo">Galega</label>
+                    </div>
+                </div>
+                <div id="meio">
+                    <div id="tudoIMG">
+                        <img src="dezembro/ftGalega.JPG" id="imagem">
+                    </div>
+                </div>
+                <div id="baixo">
+                    <div id="voltaTextoBaixo">
+                        <div id="divTexto">
+                            <label id="texto">Finalmente dia da virada mas antes a gnt foi na praia tava a ingrid e td nesse dia deixei cair minha aliança na areia mas graças a Deus a tua prima miriã achou, como tava muito quente queriamos entrar na agua mas em canas não da né ent tivemos q ir pra galega mas pra ir la tinha q levar a tua prima junto mas foi dboa até pensei q ia ser pior</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="container">
+        <div id="scroll">
+            <div id="voltaTudo">
+                <div id="cima">
+                    <div id="doTitulo">
+                        <label id="titulo">Viradaaa</label>
+                    </div>
+                </div>
+                <div id="meio">
+                    <div id="tudoIMG">
+                        <img src="dezembro/ftVirada.JPG" id="imagem">
+                    </div>
+                </div>
+                <div id="baixo">
+                    <div id="voltaTextoBaixo">
+                        <div id="divTexto">
+                            <label id="texto">Hr da virada nao sei como descrever foi a mlr virada de ano da minha vida pois estavamos desde o começo juntos dessa vez, não me arrepende de nada desse dia foi inesquecivel para mim tds os momentos de como vc estava linda nesse dia a gnt na hr dos fogos ate dps na tua casa kkkkk</label>
                         </div>
                     </div>
                 </div>
