--- a/index.html
+++ b/index.html
@@ -20,12 +20,7 @@
                 </div>
             </div>
             <div id="baixoPum">
-                <div class="dividirEscolha">
-                    <a href="index2.html"><button class="butEscolha">Específica</button></a><br>
-                </div>
-                <div class="dividirEscolha">
-                    <a href="index1.html"><button class="butEscolha">Mês</button></a><br>
-                </div>
+                    <a href="index1.html"><button class="butEscolha">Continuar</button></a><br>
             </div>
         </div>
     </div>
