--- a/agosto.html
+++ b/agosto.html
@@ -50,7 +50,7 @@
                 <div id="baixo">
                     <div id="voltaTextoBaixo">
                         <div id="divTexto">
-                            <label id="texto">A gente tava indo pro estacionamento do Maninho pro aniversario de uma amg da tua mãe q nunca nem tinha ouvido falar o nome la teve tudo q a gnt gosta tbm tava muito feliz comidas joguei um pouco com joão dps fomos dar uma volta no zinga praia achamos o carlinhos até mas o momento mais especial q ficou marcado foi o do golden deixando com vontade de ter um e vamos amor</label>
+                            <label id="texto">A gente tava indo pro estacionamento do Maninho pro aniversario de uma amg da tua mãe q nunca nem tinha ouvido falar o nome la teve tudo q a gnt gosta tbm tava muito feliz comidas joguei um pouco com joão dps fomos dar uma volta no zinga praia achamos o carlinhos até mas, o momento mais especial q ficou marcado foi o do golden deixando com vontade de ter um e vamos amor</label>
                         </div>
                     </div>
                 </div>
