--- a/dezembro.html
+++ b/dezembro.html
@@ -343,6 +343,29 @@
             </div>
         </div>
     </div>
+    <div id="container">
+        <div id="scroll">
+            <div id="voltaTudo">
+                <div id="cima">
+                    <div id="doTitulo">
+                        <label id="titulo">Logo ali</label>
+                    </div>
+                </div>
+                <div id="meio">
+                    <div id="tudoIMG">
+                        <img src="dezembro/euTuBike.JPG" id="imagem">
+                    </div>
+                </div>
+                <div id="baixo">
+                    <div id="voltaTextoBaixo">
+                        <div id="divTexto">
+                            <label id="texto">Era pra ser uma ida rapidinha na farmacia mas acabamos dando uma volta fdd por canas minha culpa eu adimito mas estava adorando dar uma volta com vc cada um com uma bike bem dboas</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div id="container">
         <div id="scroll">
