--- a/julho.html
+++ b/julho.html
@@ -151,7 +151,7 @@
                 <div id="baixo">
                     <div id="voltaTextoBaixo">
                         <div id="divTexto">
-                            <label id="texto">Dia da minha formatura do jovem aprendiz muito legal cheio de comidas nessa hr ja estamos na volta mas antes msm de chegar no caminho ka foi muito bom eu vc e a mãe de amarelinho bem chiques só tenho a te agradecer amor por estar comigo em todos os momentos principalmente nesses especiais quero vc ao meu lado em mais muitos iguais a esse</label>
+                            <label id="texto">Dia da minha formatura do jovem aprendiz muito legal cheio de comidas nessa hr ja estamos na volta mas antes msm de chegar no caminho ja foi muito bom eu vc e a mãe de amarelinho bem chiques só tenho a te agradecer amor por estar comigo em todos os momentos principalmente nesses especiais quero vc ao meu lado em mais muitos iguais a esse</label>
                         </div>
                     </div>
                 </div>
