--- a/maio.html
+++ b/maio.html
@@ -88,7 +88,7 @@
             <div id="voltaTudo">
                 <div id="cima">
                     <div id="doTitulo">
-                        <label id="titulo">Shoping</label>
+                        <label id="titulo">Shopping</label>
                     </div>
                 </div>
                 <div id="meio">
@@ -123,7 +123,7 @@
                 <div id="baixo">
                     <div id="voltaTextoBaixo">
                         <div id="divTexto">
-                            <label id="texto">Batizado do Davi tbm rolou conheceu mais a familia foi uma viagemzinha até governador mas valeu apena primeira na igreja teve algumas risadas com os 'amgs' da gloria groove tive que pesquisar pra saber como escreve dps para a casa da bila comer né que foi uma coisa que fizemos bastante tbm esse mês</label>
+                            <label id="texto">Batizado do Davi tbm rolou conheceu mais a familia foi uma viagemzinha até governador mas valeu apena primeiro na igreja teve algumas risadas com os 'amgs' da gloria groove tive que pesquisar pra saber como escreve dps para a casa da bila comer né que foi uma coisa que fizemos bastante tbm esse mês</label>
                         </div>
                     </div>
                 </div>
@@ -147,7 +147,7 @@
                 <div id="baixo">
                     <div id="voltaTextoBaixo">
                         <div id="divTexto">
-                            <label id="texto">Cmoidaaa tinha tudo que eu gosto vc,doritos,coca e empadão hmmmmmmmm eu gostummmm</label>
+                            <label id="texto">Nessa noite tinha tudo que eu amo vc,doritos,coca e empadão hmmmmmmmm eu gostummmm</label>
                         </div>
                     </div>
                 </div>
