--- a/outubro.html
+++ b/outubro.html
@@ -52,7 +52,7 @@
                 <div id="baixo">
                     <div id="voltaTextoBaixo">
                         <div id="divTexto">
-                            <label id="texto">Aniversario dele foi um dia muito bom tinha bastante gente até as primas da mãe tbm de Crisciuma q vc conheceu la tiramos varias midias comemos bastante tbm pagando varias lembrancinhas bricamos com o Davi fiquei muito feliz amor de vc estar casa vez mais proxima de toda a minha familia</label>
+                            <label id="texto">Aniversario dele foi um dia muito bom tinha bastante gente até as primas da mãe tbm de Crisciuma q vc conheceu la tiramos varias midias comemos bastante tbm pagando varias lembrancinhas bricamos com o Davi fiquei muito feliz amor de vc estar cada vez mais proxima de toda a minha familia</label>
                         </div>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
                 <div id="baixo">
                     <div id="voltaTextoBaixo">
                         <div id="divTexto">
-                            <label id="texto">Época q estamos viciados em jogar era muito divertido as nos 4 mas geralmente so eu e vc msm pena q o Kauan é desse jeito mas fzr oq é uma escolha deles seria divertido fzr alguma coisa as vezes</label>
+                            <label id="texto">Época q estamos viciados em jogar era muito divertido nos 4 mas geralmente so eu e vc msm pena q o Kauan é desse jeito mas fzr oq é uma escolha deles seria divertido fzr alguma coisa as vezes</label>
                         </div>
                     </div>
                 </div>
