--- a/fevereiro.html
+++ b/fevereiro.html
@@ -168,7 +168,7 @@
                 <div id="baixo">
                     <div id="voltaTextoBaixo">
                         <div id="divTexto">
-                            <label id="texto">Primeira vez indo na sua casa um dia que nunca vou esquecer mesmo cumprimentando a mari tudo qaundo o lucas chegou a encarada kkkkk mas depois pareceu que ja eramos conhecidos a um tempo foi muito legal smepre é me sinto muito confortavel na sua casa todo mundo me trata bem espero que nunca mude esse meu sentimento </label>
+                            <label id="texto">Primeira vez indo na sua casa um dia que ficou marcado por td q aconteceu falando com a tua mãe a primeira vez pessoalmente, quando o lucas chegou a encarada kkkkk mas depois pareceu que ja eramos conhecidos a um tempo foi muito legal sempre é me sinto muito confortavel na sua casa todo mundo me trata bem espero que nunca mude esse meu sentimento </label>
                         </div>
                     </div>
                 </div>
@@ -240,7 +240,7 @@
                 <div id="baixo">
                     <div id="voltaTextoBaixo">
                         <div id="divTexto">
-                            <label id="texto">Finalmente o dia de conhecer o temido clesio não consegui convresar direito com até hoje nunca paramos muito para conversar mas é isso não tem muito o que fazer espero que ele goste de mim msm assim</label>
+                            <label id="texto">Finalmente o dia de conhecer o temido clesio não conseguimos convresar direito com até hoje nunca paramos muito para conversar mas é isso não tem muito o que fazer espero que ele goste de mim msm assim</label>
                         </div>
                     </div>
                 </div>
